[fix] reduce daily info text size to 18px when on small screen size

--- a/src/DailyInfo.css
+++ b/src/DailyInfo.css
@@ -23,6 +23,6 @@
 
 @media screen and (max-width: 768px) {
     .Daily-info .card>.card-body {
-        font-size: 20px;
+        font-size: 18px;
     }
 }
